website/versioned_docs/version-2.1.0/tests/maester/MT.1052.md
---
title: "MT.1052 - At least one Conditional Access policy is targeting the Device Code authentication flow."
description: "Checks if at least one policy is targeting the Device Code condition. Organizations should block or limit device code flow because it can be exploited in phishing attacks, such as those conducted by the Storm-2372 group. Attackers leverage this authentication method to trick users into entering dev…"
slug: /tests/MT.1052
className: generated-test-doc
sidebar_class_name: hidden
hide_table_of_contents: true
keywords:
  - "Maester"
  - "Microsoft 365 security"
  - "MT.1052"
  - "High"
  - "CA"
---

<!-- This file is generated by website/scripts/generate-test-docs.mjs. Do not edit manually. -->

# MT.1052 - At least one Conditional Access policy is targeting the Device Code authentication flow.

## Overview

Checks if at least one policy is targeting the Device Code condition.

Organizations should block or limit device code flow because it can be exploited in phishing attacks, such as those conducted by the Storm-2372 group.
Attackers leverage this authentication method to trick users into entering device codes on malicious websites, granting unauthorized access to accounts.
Blocking or limiting this flow helps prevent exploitation by minimizing attack vectors, improving overall security posture, and safeguarding against compromised credentials through phishing techniques.

## How to fix

Configure a Conditional Access policy to block the Device Code authentication flow and limit access to only trusted users and devices or to specific named locations.

## Learn more
  - [Block authentication flows with Conditional Access policy](https://learn.microsoft.com/entra/identity/conditional-access/policy-block-authentication-flows)
  - [Microsoft Threat Intelligence | Storm-2372 conducts device code phishing campaign](https://www.microsoft.com/security/blog/2025/02/13/storm-2372-conducts-device-code-phishing-campaign/)
  - [Jeffrey Appel | How to protect against Device Code Flow abuse (Storm-2372 attacks) and block the authentication flow](https://jeffreyappel.nl/how-to-protect-against-device-code-flow-abuse-storm-2372-attacks-and-block-the-authentication-flow/)

## Test Metadata

| Field | Value |
| --- | --- |
| Test ID | MT.1052 |
| Severity | High |
| Suite | Maester |
| Category | CA |
| PowerShell test | [Test-MtCaDeviceCodeFlow](/docs/commands/Test-MtCaDeviceCodeFlow) |
| Tags | CA, Maester, MT.1052 |

## Source

- Pester test: `tests/Maester/Entra/Test-ConditionalAccessBaseline.Tests.ps1`
- PowerShell source: `powershell/public/maester/entra/Test-MtCaDeviceCodeFlow.ps1`
